--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,4 +14,5 @@ jobs:
         run: pip install pytest pandas scikit-learn
       - name: Run tests
         run: |
-          PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE pytest tests/ -v
+          cd $GITHUB_WORKSPACE
+          pytest tests/ -v
