--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -11,8 +11,10 @@ jobs:
         with:
           python-version: '3.12'
       - name: Install dependencies
-        run: pip install pytest pandas scikit-learn
-      - name: Run tests
         run: |
-          cd $GITHUB_WORKSPACE
-          pytest tests/ -v
+          pip install pytest pandas scikit-learn pytest-cov
+      - name: Run tests with coverage
+        run: |
+          pytest tests/ -v --cov=./ --cov-report=xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
