--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,33 @@
+# Core ML and data processing
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+numpy==2.1.1
+
+# Plotting (optional, used if needed)
+matplotlib==3.9.2
+
+# MongoDB sync
+pymongo==4.11.3
+dnspython==2.7.0
+
+# Requests (used in curl alternative / API access if needed)
+requests==2.32.3
+
+# Coverage for Jenkins
+coverage==7.5.1
+
+# General dependencies
 certifi==2024.2.2
 charset-normalizer==3.4.1
-contourpy==1.3.0
-cycler==0.12.1
-dnspython==2.7.0
 fonttools==4.53.1
 idna==3.10
-kiwisolver==1.4.7
-matplotlib==3.9.2
-numpy==2.1.1
 packaging==24.1
-pillow==10.4.0
-pymongo==4.11.3
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
-requests==2.32.3
 six==1.16.0
 urllib3==2.3.0
-pandas==2.2.2
-
+cycler==0.12.1
+kiwisolver==1.4.7
+pillow==10.4.0
+contourpy==1.3.0
